[gd_scene load_steps=9 format=3 uid="uid://djgxpe5u77nn2"]

[ext_resource type="Script" path="res://main.gd" id="1_a374o"]
[ext_resource type="PackedScene" uid="uid://xik1ylyfyhjv" path="res://LEVEL/level.tscn" id="2_kovyw"]
[ext_resource type="PackedScene" uid="uid://dral5p02h0pg4" path="res://player/character.tscn" id="4_kkvw3"]
[ext_resource type="PackedScene" uid="uid://bce5oqsikunf5" path="res://UI/canvas_layer.tscn" id="5_ajosy"]
[ext_resource type="PackedScene" uid="uid://dw37qhswrf46g" path="res://bg 2/parallax_background2.tscn" id="5_bhd24"]
[ext_resource type="PackedScene" uid="uid://c03j2mvshsilb" path="res://LEVEL/items/item.tscn" id="6_i1cg5"]
[ext_resource type="PackedScene" uid="uid://32at5gmpl5bv" path="res://enemies/enemy1.tscn" id="7_vcmk1"]
[ext_resource type="AudioStream" uid="uid://5mu0crq3bh5p" path="res://music/War Music  battle background music.mp3" id="8_r1a63"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_a374o")
metadata/_edit_horizontal_guides_ = [1921.0, 1053.0, -52.0]
metadata/_edit_vertical_guides_ = [-1487.0, 4568.0]

[node name="ParallaxBackground2" parent="." instance=ExtResource("5_bhd24")]
scale = Vector2(1.02, 1.02)
transform = Transform2D(1.02, 0, 0, 1.02, 0, 0)

[node name="Level" parent="." instance=ExtResource("2_kovyw")]
position = Vector2(-24, 118)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-842.28, 371.33)
scale = Vector2(2, 2)
limit_left = -1487
limit_top = -52
limit_right = 4568
limit_bottom = 1053
position_smoothing_enabled = true

[node name="Character" parent="." instance=ExtResource("4_kkvw3")]
position = Vector2(-842, 543)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Character"]
position = Vector2(-0.14, -85.835)
remote_path = NodePath("../../Camera2D")

[node name="Enemy" parent="." instance=ExtResource("7_vcmk1")]
position = Vector2(-1411, 503)
scale = Vector2(1.75, 1.75)

[node name="Projectiles" type="Node" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource("5_ajosy")]

[node name="Item" parent="." instance=ExtResource("6_i1cg5")]
position = Vector2(3293, 514)
scale = Vector2(0.30375, 0.30375)

[node name="Item2" parent="." instance=ExtResource("6_i1cg5")]
position = Vector2(-258, 595)
scale = Vector2(0.30375, 0.30375)

[node name="Item3" parent="." instance=ExtResource("6_i1cg5")]
position = Vector2(1819, 543)
scale = Vector2(0.30375, 0.30375)

[node name="Enemy2" parent="." instance=ExtResource("7_vcmk1")]
position = Vector2(4295, 471)
scale = Vector2(1.75, 1.75)

[node name="Enemy3" parent="." instance=ExtResource("7_vcmk1")]
position = Vector2(1789, 523)
scale = Vector2(1.75, 1.75)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_r1a63")
autoplay = true

[connection signal="shot" from="Character" to="." method="_on_character_shot"]
[connection signal="update_status" from="Character" to="." method="_on_character_update_status"]
[connection signal="dead_count" from="Enemy" to="." method="_on_enemy_dead_count"]
[connection signal="dead_count" from="Enemy2" to="." method="_on_enemy_2_dead_count"]
[connection signal="dead_count" from="Enemy3" to="." method="_on_enemy_3_dead_count"]
